Fix oversights on shortcut handling within Overview/Grid effect

BUG:482931